--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
     font: 14px/1.5 'Poppins', 'sans-serif';
     background: #1F1F1F;
     padding: 0 80px;
+    overflow-y: hidden;
 }
 
 ul,
@@ -81,7 +82,7 @@ img {
     color: rgba(248, 247, 249, 0.50);
 }
 
-.social-media>.social-icon>.link>img{
+.social-media>.social-icon>.link>img {
     transition: 0.4s ease-in;
 }
 
@@ -105,6 +106,20 @@ img {
 .hero-image {
     position: relative;
     flex: 8;
+}
+
+.hero-image::before {
+    z-index: -1000;
+    position: absolute;
+    bottom: -20rem;
+    right: 8rem;
+    display: block;
+    content: '';
+    width: 905px;
+    height: 897px;
+    border-radius: 905px;
+    background: rgba(248, 247, 249, 0.10);
+    filter: blur(128px);
 }
 
 .hero-image img {
